<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".signUp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <ImageView
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/username"
            android:textSize="20sp"
            android:textColor="@color/green"
            android:id="@+id/textView"
            />

        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:hint ="@string/create_your_username"
            android:textColor="@color/white"
            android:id="@+id/usernameEditText2"



            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/password"
            android:textSize="20sp"
            android:textColor="@color/green"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            />



        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:hint = "@string/create_your_password"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:background="@drawable/edittextback"
            android:inputType="textPassword"
            android:id="@+id/passworEditText" />

        <Button
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/next"
            android:background="@drawable/bn_style1"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:id="@+id/next1Button"
            />







    </LinearLayout>




</RelativeLayout>