<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".signUp2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <ImageView
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/email"
            android:textSize="20sp"
            android:textColor="@color/green"

            android:id="@+id/textView" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:hint ="@string/enter_your_email"
            android:textColor="@color/white"
            android:id="@+id/emailEditText2"
            android:background="@drawable/edittextback"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/gender"
            android:textSize="20sp"
            android:textColor="@color/green"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            />


        <Spinner
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:spinnerMode="dropdown"
            android:id="@+id/genderSpinner"
            android:layout_marginLeft="20dp"
            android:background="@color/green"
            />


        <Button
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"

            android:text="@string/next"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/bn_style1"
            android:id="@+id/next3Button"
            />







    </LinearLayout>





</RelativeLayout>


