<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".signUp3">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:weightSum="1">

        <ImageView
            android:layout_width="212dp"
            android:layout_height="108dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:text="@string/date_of_birth"
            android:textSize="20sp"
            android:textColor="@color/green"
            android:textStyle="bold"

            android:id="@+id/textView" />



        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edittextback"
            android:text="@string/click_to_enter_the_date_of_birth"
            android:textColor="@color/white"
            android:textAlignment="textStart"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="start"
            android:id="@+id/dateofbirthButton"
            />
        <Button
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="100dp"
            android:text="@string/done"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/bn_style1"
            android:id="@+id/doneButton"
            />


    </LinearLayout>








</RelativeLayout>

